# builDroid

./: .env.example  .gitignore  ExecutionAgent.sh  GracleBuildErrorSolver.py.txt  LICENSE  README.md  admin_script.py  ai_settings.yaml  ai_settings.yaml.example  api_token_reset.py  api_token_setup.py  batch_file.txt  batch_file_old.txt  benchmarks.py  clean.sh  clean_docker.sh  clone_and_set_metadata.py  cmd_counts_with_status.xlsx  commands_interface.json  create_files_index.py  customize.json  data_ingestion.py  experiment_results_1.xlsx  experiment_results_sheet.py  extract_apks.sh  get_main_language.py  import_example.py  iteration_counter.py  manage_docker_images.py  parsing_erros_responses.txt  post_process.py  prepare_ai_settings.py  project_meta_data.json  pyproject.toml  remove_api_token.py  requirements.in  requirements.txt  response_content.txt  run.sh  rundex.sh  (+2 more)
.devcontainer/: devcontainer.json  install_python.sh
autogpt/: .env  __main__.py  command_decorator.py  runs_logs.txt
autogpt/agents/: agent.py  base.py
autogpt/app/: cli.py  configurator.py  main.py  setup.py  utils.py
autogpt/commands/: __init__.py  analyze_test_execution.py  automate_installation.py  collect_info.py  decorators.py  docker_helpers_static.py  execute_code.py  file_operations.py  file_operations_utils.py  git_operations.py  image_gen.py  info_collection_static.py  search_documentation.py  states.py  steps_commands.py  system.py  web_search.py  web_selenium.py
autogpt/config/: __init__.py  ai_config.py  config.py  prompt_config.py
autogpt/core/: ARCHITECTURE_NOTES.md  README.md
autogpt/json_utils/: llm_response_format_1.json  utilities.py
autogpt/llm/: __init__.py  api_manager.py  base.py  llama_tokenizer.py
autogpt/logs/: __init__.py  formatters.py  log_cycle.py  logger.py
autogpt/memory/: message_history.py
autogpt/models/: base_open_ai_plugin.py  command.py  command_registry.py
autogpt/plugins/: __init__.py  plugins_config.py
autogpt/processing/: text.py
autogpt/prompts/: generator.py  prompt.py  prompt_parser.py
autogpt/speech/: base.py  eleven_labs.py  gtts.py  macos_tts.py  say.py  stream_elements_speech.py
autogpt/workspace/: BubbleSort.java  workspace.py
experimental_setups/: experiments_list.txt  increment_experiment.py
nightly_runs/: all_projects.txt  batch_1.txt  batch_2.txt  batch_3.txt  batch_4.txt  batch_5.txt
parsable_logs/: scipy1733702797.0484037.json
problems_memory/: HashDroid  marshmallow  pytest
problems_memory_old/: Activiti  Chart.js  ansible  bootstrap  dubbo  folly  imgui_test_engine  langchain  mermaid  mpv  msgpack-c  nest  node  numpy  scikit-learn  scipy  tensorflow  webpack  webview  xgboost
prompt_files/: Template.dockerfile  c_guidelines  command_stuck  cpp_guidelines  cycle_instruction  gradle_guidelines  java_guidelines  javascript_guidelines  latest_containter_technology  python_guidelines  remove_progress_bars  steps_list.json  summarize_cycle  tools_list
scripts/: check_requirements.py  install_plugin_deps.py
search_logs/Activiti/: Activiti_build_install_from_source.json
src/builDroid/: __init__.py
(+153 files in other folders)
